Backend: Added new servertype Frontend. Sends the url/serverroomid.json to the frontend.

--- a/modules-available/locationinfo/templates/config.html
+++ b/modules-available/locationinfo/templates/config.html
@@ -34,7 +34,7 @@
     </div>
     <div style="float: left; margin-left: 15px;">
       <Label>{{lang_mode}}</Label><br>
-      <select name="mode" onchange=vertical_cb(this.value);>
+      <select name="mode" onchange="vertical_cb(this.value);">
         <option value="1" id="mode1">{{lang_mode1}}</option>
         <option value="2" id="mode2">{{lang_mode2}}</option>
         <option value="3" id="mode3">{{lang_mode3}}</option>
