[statistics_reporting] added time bounds slider

--- a/modules-available/statistics_reporting/style.css
+++ b/modules-available/statistics_reporting/style.css
@@ -2,7 +2,7 @@
     margin-bottom: 10px;
 }
 
-.top-row select, .top-row .btn-group {
+.top-row > * {
     margin-right: 10px;
     margin-bottom: 10px;
 }
@@ -13,4 +13,26 @@
 
 .buttonbar {
     margin-bottom: 20px;
+}
+
+#slider {
+    display: inline-block;
+    width: 160px;
+    margin-left: 20px;
+    margin-bottom: 3px;
+    margin-right: 20px;
+}
+
+#lower-handle, #upper-handle {
+    width: 3em;
+    height: 1.6em;
+    top: 50%;
+    margin-top: -.8em;
+    margin-left: -1.5em;
+    text-align: center;
+    line-height: 1.6em;
+}
+
+#applybound {
+    display: none;
 }
