[statistics_reporting] small label changes

--- a/modules-available/statistics_reporting/templates/_page.html
+++ b/modules-available/statistics_reporting/templates/_page.html
@@ -7,7 +7,7 @@
 						<th class="text-left col-md-2"></th>
 						<th class="text-left column-totaltime">{{lang_totalTime}}</th>
 						<th class="text-left column-mediantime">{{lang_medianSessionLength}}</th>
-						<th class="text-left column-sessions">{{lang_sessions}}</th>
+						<th class="text-left column-longsessions">{{lang_longSessions}}</th>
 						<th class="text-left column-shortsessions">{{lang_shortSessions}}</th>
 						<th class="text-left column-timeoffline">{{lang_overallOfftime}}</th>
 					</tr>
@@ -33,7 +33,7 @@
 						<th data-sort="string" class="text-left col-md-2">{{lang_location}}</th>
 						<th data-sort="int" data-sort-default="desc" class="text-left column-totaltime">{{lang_totalTime}}</th>
 						<th data-sort="int" data-sort-default="desc" class="text-left column-mediantime">{{lang_medianSessionLength}}</th>
-						<th data-sort="int" data-sort-default="desc" class="text-left column-sessions">{{lang_sessions}}</th>
+						<th data-sort="int" data-sort-default="desc" class="text-left column-longsessions">{{lang_longSessions}}</th>
 						<th data-sort="int" data-sort-default="desc" class="text-left column-shortsessions">{{lang_shortSessions}}</th>
 						<th data-sort="int" data-sort-default="desc" class="text-left column-timeoffline">{{lang_totalOffTime}}</th>
 					</tr>
@@ -62,7 +62,7 @@
 						<th data-sort="string" class="text-left column-location">{{lang_location}}</th>
 						<th data-sort="int" data-sort-default="desc" class="text-left column-totaltime">{{lang_totalTime}}</th>
 						<th data-sort="int" data-sort-default="desc" class="text-left column-mediantime">{{lang_medianSessionLength}}</th>
-						<th data-sort="int" data-sort-default="desc" class="text-left column-sessions">{{lang_sessions}}</th>
+						<th data-sort="int" data-sort-default="desc" class="text-left column-longsessions">{{lang_longSessions}}</th>
 						<th data-sort="int" data-sort-default="desc" class="text-left column-shortsessions">{{lang_shortSessions}}</th>
 						<th data-sort="int" data-sort-default="desc" class="text-left column-timeoffline">{{lang_totalOffTime}}</th>
 						<th data-sort="int" data-sort-default="desc" class="text-left column-lastlogout">{{lang_clientLogout}}</th>
