[statistics_reporting] bugfix

--- a/modules-available/statistics_reporting/templates/_page.html
+++ b/modules-available/statistics_reporting/templates/_page.html
@@ -17,7 +17,7 @@
 						<th class="text-left">{{lang_total}}</th>
 						<td class="text-left column-totaltime">{{time}}</td>
 						<td class="text-left column-mediantime">{{medianTime}}</td>
-						<td class="text-left column-sessions">{{sessions}}</td>
+						<td class="text-left column-longsessions">{{sessions}}</td>
 						<td class="text-left column-shortsessions">{{shortSessions}}</td>
 						<td class="text-left column-timeoffline">{{totalOfftime}}</td>
 					</tr>
@@ -44,7 +44,7 @@
 						<td class="locationName text-left">{{location}}</td>
 						<td data-sort-value="{{timeInSeconds}}" class="text-left column-totaltime">{{time}}</td>
 						<td data-sort-value="{{medianTimeInSeconds}}" class="text-left column-mediantime">{{medianTime}}</td>
-						<td class="text-left column-sessions">{{sessions}}</td>
+						<td class="text-left column-longsessions">{{sessions}}</td>
 						<td class="text-left column-shortsessions">{{shortSessions}}</td>
 						<td data-sort-value="{{offlineTimeInSeconds}}" class="text-left column-timeoffline">{{offTime}}</td>
 					</tr>
@@ -76,7 +76,7 @@
 						<td class="text-left column-location"><a class="locationLink" href="#">{{locationName}}</a></td>
 						<td data-sort-value="{{timeInSeconds}}" class="text-left column-totaltime">{{time}}</td>
 						<td data-sort-value="{{medianTimeInSeconds}}" class="text-left column-mediantime">{{medianTime}}</td>
-						<td class="text-left column-sessions">{{sessions}}</td>
+						<td class="text-left column-longsessions">{{sessions}}</td>
 						<td class="text-left column-shortsessions">{{shortSessions}}</td>
 						<td data-sort-value="{{offlineTimeInSeconds}}" class="text-left column-timeoffline">{{offTime}}</td>
 						<td data-sort-value="{{lastLogoutUnixtime}}" class="text-left column-lastlogout">{{lastLogout}}</td>
