--- a/modules-available/statistics_reporting/style.css
+++ b/modules-available/statistics_reporting/style.css
@@ -7,6 +7,10 @@
     margin-bottom: 10px;
 }
 
+.top-row #button-settings {
+    margin-right: 0;
+}
+
 .buttonbar button {
     margin-bottom: 4px;
 }
