--- a/modules-available/locationinfo/templates/timetable.html
+++ b/modules-available/locationinfo/templates/timetable.html
@@ -27,7 +27,7 @@
             		<span class="input-group-addon">
             			<span class="glyphicon glyphicon-time"></span>
             		</span>
-            	<input required type="text" class="form-control timepicker2" name="openingtime[]" id="openingtimepicker" pattern="[0-9]{1,2}:[0-9]{2}" value="{{openingtime0}}">
+            	<input type="text" class="form-control timepicker2" name="openingtime[]" id="openingtimepicker" pattern="[0-9]{1,2}:[0-9]{2}" value="{{openingtime0}}">
             </div>
           </td>
           <td>
@@ -35,7 +35,7 @@
             		<span class="input-group-addon">
             			<span class="glyphicon glyphicon-time"></span>
             		</span>
-            	<input required type="text" class="form-control timepicker2" name="closingtime[]" id="openingtimepicker" pattern="[0-9]{1,2}:[0-9]{2}" value="{{closingtime0}}">
+            	<input type="text" class="form-control timepicker2" name="closingtime[]" id="openingtimepicker" pattern="[0-9]{1,2}:[0-9]{2}" value="{{closingtime0}}">
             </div>
           </td>
         </tr>
@@ -46,7 +46,7 @@
             		<span class="input-group-addon">
             			<span class="glyphicon glyphicon-time"></span>
             		</span>
-            	<input required type="text" class="form-control timepicker2" name="openingtime[]" id="openingtimepicker" pattern="[0-9]{1,2}:[0-9]{2}" value="{{openingtime1}}">
+            	<input type="text" class="form-control timepicker2" name="openingtime[]" id="openingtimepicker" pattern="[0-9]{1,2}:[0-9]{2}" value="{{openingtime1}}">
             </div>
           </td>
           <td>
@@ -54,7 +54,7 @@
             		<span class="input-group-addon">
             			<span class="glyphicon glyphicon-time"></span>
             		</span>
-            	<input required type="text" class="form-control timepicker2" name="closingtime[]" id="openingtimepicker" pattern="[0-9]{1,2}:[0-9]{2}" value="{{closingtime1}}">
+            	<input type="text" class="form-control timepicker2" name="closingtime[]" id="openingtimepicker" pattern="[0-9]{1,2}:[0-9]{2}" value="{{closingtime1}}">
             </div>
           </td>
         </tr>
@@ -65,7 +65,7 @@
             		<span class="input-group-addon">
             			<span class="glyphicon glyphicon-time"></span>
             		</span>
-            	<input required type="text" class="form-control timepicker2" name="openingtime[]" id="openingtimepicker" pattern="[0-9]{1,2}:[0-9]{2}" value="{{openingtime2}}">
+            	<input type="text" class="form-control timepicker2" name="openingtime[]" id="openingtimepicker" pattern="[0-9]{1,2}:[0-9]{2}" value="{{openingtime2}}">
             </div>
           </td>
           <td>
@@ -73,7 +73,7 @@
             		<span class="input-group-addon">
             			<span class="glyphicon glyphicon-time"></span>
             		</span>
-            	<input required type="text" class="form-control timepicker2" name="closingtime[]" id="openingtimepicker" pattern="[0-9]{1,2}:[0-9]{2}" value="{{closingtime2}}">
+            	<input type="text" class="form-control timepicker2" name="closingtime[]" id="openingtimepicker" pattern="[0-9]{1,2}:[0-9]{2}" value="{{closingtime2}}">
             </div>
           </td>
         </tr>
